<!-- Copyright (C) 2016 Google, Inc.-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/native_ad_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:clipToPadding="false"
    tools:context=".TestNativeAdFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_native_ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_native_ad_fragment"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <CheckBox
            android:id="@+id/content_ad_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_content_ads"
            android:freezesText="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <CheckBox
            android:id="@+id/app_install_ad_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_app_install_ads"
            android:freezesText="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <Button
            android:id="@+id/load_native_ad_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingEnd="32dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingStart="32dp"
            android:text="@string/load_ad"/>

        <FrameLayout
            android:id="@+id/native_ad_content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/log_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="bottom"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </LinearLayout>
</ScrollView>
